--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+body {
+  background: #ffddd2;
+  height: 100vh;
+  background-repeat: no-repeat;
+}
+
 h1 {
-  --penguin-skin: gray;
+  color: #e29578;
   font-size: 40px;
   text-align: center;
+}
+
+#footer {
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  width: 100vw;
 }
 
 .logo {
@@ -22,8 +35,40 @@ h1 {
 }
 
 .nav li a {
-  color: gold;
+  color: #fff;
   text-decoration: none;
   font-size: 30px;
+}
+
+.button-container {
+  background-color: #e29578;
+  border-radius: 10px;
+  height: 300px;
+  width: 500px;
+  margin: 0 auto;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+button {
+  margin: 0 auto;
+  position: absolute;
+  padding: 8px 20px;
+  cursor: pointer;
+  background-color: #fff;
+  color: #006d77;
+  border: none;
+}
+
+.button-enter {
+  font-size: 20px;
 }
 /*# sourceMappingURL=style.css.map */
