--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,25 @@
+$color-skyblue: #ccffff;
+$color-rose-pink: #e29578;
+$color-soft-pink: #ffddd2;
+$color-teal: #006d77;
+$color-sea-green: #83c5be;
+body {
+  background: $color-soft-pink;
+  height: 100vh;
+  background-repeat: no-repeat;
+}
 h1 {
-  --penguin-skin: gray;
+  color: $color-rose-pink;
   font-size: 40px;
   text-align: center;
 }
+#footer {
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  width: 100vw;
+}
+//#footer
 .logo {
   height: 50px;
   width: 50px;
@@ -17,10 +34,107 @@ h1 {
     padding-right: 20px;
 
     a {
-      color: gold;
+      color: #fff;
       text-decoration: none;
       font-size: 30px;
     }
   }
 }
 //.nav
+
+.button-container {
+  background-color: $color-rose-pink;
+  border-radius: 10px;
+  height: 300px;
+  width: 500px;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+//.button-container
+
+button {
+  margin: 0 auto;
+  position: absolute;
+  padding: 8px 20px;
+  cursor: pointer;
+  background-color: #fff;
+  color: $color-teal;
+  border: none;
+}
+
+.button-enter {
+  font-size: 20px;
+}
+//.button-enter
+
+//
+// PURECSS HTML PAGE
+// .back {
+//   position: fixed;
+//   padding: 0;
+//   margin: 0;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: white;
+//   animation-name: backdiv;
+//   animation-duration: 1s;
+//   animation-iteration-count: infinite;
+// }
+
+// .heart {
+//   display: inline-flex;
+//   position: absolute;
+//   margin: auto;
+//   top: 0;
+//   right: 0;
+//   bottom: 0;
+//   left: 0;
+//   background-color: pink;
+//   height: 50px;
+//   width: 50px;
+//   transform: rotate(-45deg);
+//   animation-name: beat;
+//   animation-duration: 1s;
+
+//   animation-iteration-count: infinite;
+// }
+// .heart:after {
+//   background-color: pink;
+//   content: '';
+//   border-radius: 50%;
+//   position: absolute;
+//   width: 50px;
+//   height: 50px;
+//   top: 0;
+//   left: 25px;
+// }
+// .heart:before {
+//   background-color: pink;
+//   content: '';
+//   border-radius: 50%;
+//   position: absolute;
+//   width: 50px;
+//   height: 50px;
+//   top: -25px;
+//   left: 0;
+// }
+
+// @keyframes backdiv {
+//   50% {
+//     background: #ffe6f2;
+//   }
+// }
+
+// @keyframes beat {
+//   0% {
+//     transform: scale(1) rotate(-45deg);
+//   }
+//   50% {
+//     transform: scale(0.6) rotate(-45deg);
+//   }
+// }
