creating digital clock project

--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -1,4 +1,5 @@
 $color-skyblue: #ccffff;
+$color-black: #000;
 $color-blush-pink: #e07a5f;
 $color-rose-pink: #e29578;
 $color-soft-pink: #ffddd2;
@@ -6,3 +7,4 @@ $color-teal: #006d77;
 $color-sea-green: #83c5be;
 $color-white: #fff;
 $color-dessert-green: #ece4db;
+$color-night: #003049;
