styling the calculator

--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -3,6 +3,7 @@ $color-black: #000;
 $color-blush-pink: #e07a5f;
 $color-rose-pink: #e29578;
 $color-soft-pink: #ffddd2;
+$color-hot-pink: #ff006e;
 $color-teal: #006d77;
 $color-sea-green: #83c5be;
 $color-white: #fff;
