creating a color scheme generator, installing color-scheme library

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,6 +4,8 @@
 @import 'digital-clock';
 @import 'drum-kit';
 @import 'guess-game';
+@import 'color-switcher';
+@import 'color-scheme-generator';
 
 body {
   height: 100vh;
