--- a/assets/css/color-scheme-generator.css
+++ b/assets/css/color-scheme-generator.css
@@ -108,7 +108,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
@@ -171,40 +171,29 @@ main {
 }
 
 .wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 100vh;
   width: 100%;
 }
 
 .wrapper > div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   color: #000;
   font-size: 30px;
   font-weight: bold;
   text-transform: uppercase;
 }
+.wrapper > div:hover {
+  cursor: pointer;
+}
 
 .button-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   position: absolute;
   bottom: 10px;
   width: 100%;
@@ -220,9 +209,28 @@ main {
   border-radius: 10px;
   cursor: pointer;
 }
-
 #generate:hover {
   background-color: #fff;
   color: #000;
 }
+
+.alert-box {
+  background-color: #000;
+  border-radius: 20px;
+  color: #fff;
+  display: flex;
+  font-size: 15px;
+  padding: 15px;
+  height: 30px;
+  width: 200px;
+  position: absolute;
+  text-transform: none;
+  text-align: center;
+  top: 35%;
+}
+
+.hidden {
+  display: none;
+}
+
 /*# sourceMappingURL=color-scheme-generator.css.map */
