--- a/assets/css/color-scheme-generator.scss
+++ b/assets/css/color-scheme-generator.scss
@@ -22,6 +22,10 @@ main {
   font-size: 30px;
   font-weight: bold;
   text-transform: uppercase;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .button-wrapper {
@@ -46,4 +50,23 @@ main {
     background-color: $color-white;
     color: $color-black;
   }
+}
+
+.alert-box {
+  background-color: $color-black;
+  border-radius: 20px;
+  color: $color-white;
+  display: flex;
+  font-size: 15px;
+  padding: 15px;
+  height: 30px;
+  width: 200px;
+  position: absolute;
+  text-transform: none;
+  text-align: center;
+  top: 35%;
+}
+
+.hidden {
+  display: none;
 }
