--- a/React/ToDoApp/todo-app/src/App.css
+++ b/React/ToDoApp/todo-app/src/App.css
@@ -19,7 +19,7 @@ button {
 /* button */
 
 .App {
-    border: 8px dotted palevioletred;
+    border: 8px solid palevioletred;
     height: 50vh;
     width: 50vw;
     margin: 0 auto;
@@ -33,6 +33,8 @@ button {
 /* .app-title */
 
 
-.form-wrapper {
+.form-wrapper, li {
     display: flex;
+    justify-content: center;
 }
+/* .form-wrapper */
